<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:bxll="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <com.example.ownproject.util.MyToolBar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <FrameLayout
        android:visibility="gone"
        android:id="@+id/main_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">

        <com.example.ownproject.util.TabView
            android:id="@+id/btn_new"
            bxll:tabImage="@drawable/ic_news"
            bxll:tabSelectedImage="@drawable/ic_news_selected"
            bxll:tabColor="#FF45C01A"
            bxll:tabTitle="@string/news"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickTab" />

        <com.example.ownproject.util.TabView
            android:id="@+id/btn_chat"
            bxll:tabImage="@drawable/ic_chat"
            bxll:tabSelectedImage="@drawable/ic_chat_selected"
            bxll:tabColor="#FF45C01A"
            bxll:tabTitle="@string/chat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickTab" />

        <com.example.ownproject.util.TabView
            android:id="@+id/btn_game"
            bxll:tabImage="@drawable/ic_game"
            bxll:tabSelectedImage="@drawable/ic_game_select"
            bxll:tabColor="#FF45C01A"
            bxll:tabTitle="@string/game"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickTab" />
    </LinearLayout>
</LinearLayout>